codegen api structs from oas, cleanup pushcert api endpoint
