# docs/openapi.yaml
@@ -30,15 +30,17 @@ paths:
               -----END RSA PRIVATE KEY-----
       responses:
         '200':
-          description: The topic, expiry, and/or any errors are returned.
+          description: The topic and expiry of the APNs certificate are returned.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/PushCertResponse'
+        '400':
+          $ref: '#/components/responses/APIError'
         '401':
-           $ref: '#/components/responses/UnauthorizedError'
+          $ref: '#/components/responses/UnauthorizedError'
         '500':
-          description: Error reading HTTP body from request
+          $ref: '#/components/responses/APIError'
   /v1/push/{id*}:
     get:
       description: Send APNs push notifications to MDM enrollments
@@ -228,10 +230,15 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/APIResult'
+    APIError:
+      description: Errors returned from an API endpoint. HTTP status code may indicate the source of the error (i.e. server-side or request/input side).
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ErrorResponse'
   schemas:
     APIResult:
       type: object
-      description: foo
       properties:
         no_push:
           type: boolean
@@ -263,10 +270,11 @@ components:
                   type: string
     PushCertResponse:
       type: object
+      description: APNs push certificate and key upload response.
+      required:
+        - topic
+        - not_after
       properties:
-        error:
-          description: Error response string.
-          type: string
         topic:
           type: string
           description: The "topic" (UID attribute) from the uploaded APNs certificate.
@@ -276,3 +284,13 @@ components:
           format: date-time
           description: Expiration date of the uploaded APNs certificate.
           example: '2026-01-07T04:04:46Z'
+    ErrorResponse:
+      type: object
+      description: Error response.
+      required:
+        - error
+      properties:
+        error:
+          type: string
+          description: Error response string.
+          example: The sun is shining.
