# http/api/schema.go
@@ -1,0 +1,20 @@
+// Code generated by github.com/atombender/go-jsonschema, DO NOT EDIT.
+
+package api
+
+import "time"
+
+// Error response.
+type ErrorResponseJson struct {
+	// Error response string.
+	Error string `json:"error"`
+}
+
+// APNs push certificate and key upload response.
+type PushCertResponseJson struct {
+	// Expiration date of the uploaded APNs certificate.
+	NotAfter time.Time `json:"not_after"`
+
+	// The "topic" (UID attribute) from the uploaded APNs certificate.
+	Topic string `json:"topic"`
+}
